--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Estudio Fotográfico Fotocol2000</title>
-        <link rel="stylesheet" type="text-css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
         <h1>Bienvenido a la web del estudio Fotográfico Fotocol2000</h1>
